# assetman

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
gltf/: Cargo.toml
gltf/src/: lib.rs
gltf/tests/: basket.gltf  load.rs
image/: Cargo.toml
image/src/: lib.rs
image/tests/: load.rs
json/: Cargo.toml
json/src/: lib.rs
json/tests/: config.json  load.rs
shader/: Cargo.toml
shader/src/: lib.rs
shader/tests/: error.wgsl  load.rs  minimal.wgsl
